--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.5.1",
+    "dotenv": "^16.0.0",
     "ganache-cli": "^6.12.2",
+    "jest": "^27.5.1",
     "mocha": "^9.1.2",
     "solc": "^0.4.17",
     "web3": "^1.6.0"
